# hy-cool-dtu

./: .clang-format  .gitignore  CMakeLists.txt  DIRECTORY_NORMALIZATION_REPORT.md  LICENSE  Makefile.test  PROJECT_STATUS.md  README.md  flash.sh  platformio.ini  quick_setup.sh  temp_io_fix.h  test_offline.sh
App/: main.c
App/ota/include/: ota_config.h  ota_manager.h
cmake/: arm-none-eabi.cmake
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FLASH_GUIDE.md  PROJECT_STATUS.md
docs/architecture/: 01_PROJECT_CURRENT_ANALYSIS.md  02_REFACTOR_FUNCTIONAL_PLANNING.md  03_DEVELOPMENT_PLAN.md  04_ARCHITECTURE_DESIGN.md  AI_INTEGRATION_TECHNICAL_EXTENSION.md  NEXT_GENERATION_DEVELOPMENT_PROPOSAL.md  REFACTOR_README.md
docs/architecture/modules/: 01_SENSOR_MODULE.md  02_COMMUNICATION_MODULE.md  03_DATA_MANAGEMENT_MODULE.md  04_ALARM_MODULE.md  05_USER_INTERFACE_MODULE.md  06_SYSTEM_SERVICES_MODULE.md  07_HARDWARE_ABSTRACTION_MODULE.md  08_CONFIGURATION_MODULE.md  09_OTA_UPGRADE_MODULE.md  10_AI_INTERACTION_MODULE.md  11_TASK_TRACKING_SYSTEM.md  12_MODULE_INTEGRATION_DESIGN.md  README.md
docs/development/: DEVELOP.md  OFFLINE_DEVELOPMENT.md  OTA_DEV.md  OTA_DEV_LOG.md  OTA_INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE_COMPLETE.md
docs/manuals/: DATA_CACHE_RETRANSMISSION_MANUAL.md  OTA_UPGRADE_MANUAL.md  RTC_TIME_MANAGEMENT_MANUAL.md  WATCHDOG_DEVELOPMENT_MANUAL.md
docs/reports/: SYSTEM_DIAGNOSIS_REPORT.md
scripts/: update_progress.py
src/: .gitignore  BL02D_Special.C  BL02D_Special.H  BL03D_BH_Para.C  Base_Para.C  CMakeLists.txt  HistoryData.C  HistoryDataRead.C  HistoryDataWrite.C  Modbus.c  Modbus_LoraModbusMaster.c  README.md  RI300CRC.c  Tempalarm.C  alarm.C  datastruct.c  global_vars.c  io.c  main_loop.c  modbus协议.txt  switch.c  sys_flash.c  uart0_Modbus.c  uart0_Modbus_uart3.c  uart1_Modbus.c  uart1_Modbus_LoraModbusMaste.c  uart2_Modbus.c  uart2_Modbus_LoraModbusMaste.c  uart2_Modbus_pc.c  uart2_Modbus_tp.c  uart3_Modbus.c  uart4_Modbus_LoraModbusMaste.c  uart4_Modbus_LoraModbusMaste_uart0.c  uart4_dealdata.c
src/adc/: adc.c
src/alarm/: SetAlarmFlag.c
src/alarm_led/: AlarmLed.c  alarm.h
src/bl/: BL.c
src/dido/: dido.c  dido.h
src/i2c/: IIC-bak.c  IIC.c  IIC1.c
src/include/: Nano100Series.h  constants.h  constants_fixed.h  core_cm0plus.h  global.h  global_vars.h  io_types.h  rtc.h  stdint.h  stdio.h  stdlib.h  string.h  sys.h
src/key/: Door.C  PowIn.c  PowIn1.c  key.C
src/lcd/: lcd.c  lcd.h
src/led/: led.c
src/linker/: nano100_512k.ld
src/lora/: lora.c
src/ota/src/: ota_config.c  ota_manager.c
src/pwm/: PWM.C
src/sht2x/: I2C_HAL.c  SHT2x.c  shx.h
src/si24r1/: SI24R1.c  SI24R11.c
src/sim7600/: Combine.c  Sim7600.H  Sim7600Send.c  Sim7600_StatusMachine.c  Simply600ReceiveDeal.c  Test.c  Wifi_TranslateConfig.c  cJSON.c  cJSON.h  md5.h  sim7600_main.c
src/spi/: W25Q128-1.c  W25Q128.c  W25QXX.h
src/switch/: switch.c
src/test_function/: TestFunction.c
src/uart/: SerInt-uart0-uart3.c  SerInt-uart0.c  SerInt_uart1.c  SerInt_uart2.c  SerInt_uart3.c  SerInt_uart4.c  Simdata.c
src/watchdong/: watchdog.c
src/workled/: led.h  workLed.c
tools/debug/: openocd_nano100.cfg
tools/scripts/: build.sh  connect_nano100sd3bn.sh  debug.sh  detect_device.sh  flash.sh  flash_firmware.sh  install_dependencies.sh  manual_jlink_test.sh  offline_test.py  test_chip_connection.sh  test_generic_connection.sh  test_jlink.sh  test_project.sh
tools/test/: test_ota.py
